# picorv32_socmake

./: .gitignore  CMakeLists.txt  picorv32.v
firmware/cmake/: fw_utils.cmake  riscv_toolchain.cmake
firmware/sdk/: CMakeLists.txt  crt0.S  irq.h  riscv.ld  sections.lds
firmware/sdk/include/: perf_counter.h  sim_print.h
firmware/tests/: CMakeLists.txt
firmware/tests/coremark/: CMakeLists.txt
firmware/tests/coremark/port/: core_portme.c  core_portme.h  ee_printf.c
firmware/tests/full_test/: CMakeLists.txt
firmware/tests/hello_world/: CMakeLists.txt  main.c
firmware/tests/perf_counter/: CMakeLists.txt  main.c
vrf/: CMakeLists.txt  testbench.v
